<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Japanese Studies</string>
    <string name="main_title">Japanese Studies</string>
    <string name="kanji">Kanji</string>
    <string name="vocab">Vocab</string>
    <string name="grammar">Grammar</string>
    <string name="search">Search</string>
    <string name="search_hint">Kanji, Vocab, Context Sentences</string>
    <string name="read">Read</string>
	<string name="write">Write</string>
	<string name="listen">Listen</string>
	<string name="id">list</string>
	<string name="llid">llid</string>
	<string name="vrri">Select a range of levels and the number of items to be reviewed.</string>
	<string name="review">Review</string>
	<string name="numitems">Enter number of items</string>
	<string name="answer">Answer</string>
	<string name="start">Start</string>
	<string name="meaning">Meaning</string>
	<string name="reading">Reading</string>
	<string name="choose_language">Choose Language</string>
	<string name="language">Language</string>
	<string name="english">English</string>
	<string name="japanese">日本語</string>
	<string name="list">List</string>
	<!-- VocabReadingActivity -->
	<string name="context">Context</string>
	<string name="insert">Insert</string>
	<string name="continu">Continue</string>
	<string name="return_home">Home</string>
	<string name="correct_meaning">Correct Meaning</string>
	<string name="correct_reading">Correct Reading</string>
	<string name="correct_meanings">Meanings Correct</string>
	<string name="correct_readings">Readings Correct</string>
	<string name="incorrect_meaning">Incorrect Meaning</string>
	<string name="incorrect_reading">Incorrect Reading</string>
	<string name="end_of_review">End of Review</string>
	<string name="install">Install</string>
	<string name="installation_head">Please install the necessary resources.</string>
	<string name="kinstall">Please install kanji.</string>
	<string name="vinstall">Please install vocab.</string>
	<!--  Search Errors -->
	<string name="sile1">To list kanji or vocab by level, enter a number between 1 and 60. E.g. "5 qk ql"</string>
	<string name="sile2">Please enter a number between 1 and 60 to retrieve kanji or vocab by level.</string>
	<string name="skle">There are no kanji at this level.</string>
	<string name="svle">There are no vocab at this level.</string>
	<string name="skce">There is no such kanji in this app.</string>
	<string name="svce">There is no such vocab in this app.</string>
	<string name="skme">There are no kanji in this app that use that translation.</string>
	<string name="svme">There are no vocab words in this app that use that translation.</string>
	<string name="skke">There are no kanji in this app with those sounds.</string>
	<string name="svke">There are no vocab words in this app with those sounds.</string>
	<string name="ssve">There are no sentences with that vocab word.</string>
	<string name="sae1">No matches found.</string>
	<string name="sae2">No kanji matches found.</string>
	<string name="sae3">No vocab matches found.</string>
</resources>
