<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="$com.gmail.jbosworth2.japanese_studies.$VocabReadingActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait" >
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/vocab" />
        <TextView
          android:id="@+id/vrtv"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="7"
          android:text="@string/nothing" />
        <EditText
          android:id="@+id/vret1"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/meaning" />
        <EditText
          android:id="@+id/vret2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:hint="@string/reading" />
        <LinearLayout
           	android:orientation="horizontal"
   			android:layout_width="match_parent"
    		android:layout_height="wrap_content">
    		<Button
    		  android:id="@+id/vrb1"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/start"
	          android:onClick="review" />
	        <Button
	          android:id="@+id/vrb2"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/insert"
	          android:onClick="enteredAnswer" />
	        <Button
	          android:id="@+id/vrb3"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/continu"
	          android:onClick="proceed" />
	        <Button
	          android:id="@+id/vrb4"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:text="@string/return_home"
	          android:onClick="returnHome" />
	    </LinearLayout>
</LinearLayout>