<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="$com.gmail.jbosworth2.japanese_studies.$MainActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait" >
        <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="4"
          android:text="@string/main_title" />
        <LinearLayout
            android:orientation="vertical"
    		android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:layout_weight="6" >
        	<Button
          	  android:layout_width="match_parent"
          	  android:layout_height="wrap_content"
          	  android:text="@string/kanji"
          	  android:onClick="startKanji" />
        	<Button
          	  android:layout_width="match_parent"
          	  android:layout_height="wrap_content"
          	  android:text="@string/vocab"
          	  android:onClick="startVocab" />
        	<Button
          	  android:layout_width="match_parent"
          	  android:layout_height="wrap_content"
          	  android:text="@string/search"
          	  android:onClick="startSearch" />
        </LinearLayout>
</LinearLayout>