<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="$com.gmail.jbosworth2.japanese_studies.$KanjiActivity"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait" >
        <TextView
          android:id="@+id/ktv"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="2"
          android:text="@string/kanji" />
        <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="4"
          android:text="@string/read"
          android:onClick="startKanjiReading" />
        <Button
          android:id="@+id/kb2"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="4"
          android:text="@string/write"
          android:onClick="startKanjiWriting" />
</LinearLayout>